--- a/txt/0-acknowledgments.tex
+++ b/txt/0-acknowledgments.tex
@@ -14,6 +14,6 @@
 
 \vspace{1cm}
 \noindent
-I want to express my appreciation to the Chair of Software and Systems Engineering of Prof. Dr. Alexander Pretschner for the opportunity to work on this thesis.
+I want to express my appreciation to the Chair of Software and Systems Engineering of my supervisor Prof. Dr. Alexander Pretschner for the opportunity to work on this thesis.
 In particular, I want to thank my advisor Valentin Zielgmeier for his patience, all the helpful hints, and the detailed feedback I received.
 \end{document}
