--- a/txt/1-introduction.tex
+++ b/txt/1-introduction.tex
@@ -5,14 +5,14 @@
 \chapter{Introduction}
 With the rise of the modern internet more and more systems become digital.
 This transformation goes hand in hand with the collection of unprecedented amounts of data leading to the age of big data.
-On the on hand, this enables great possibilities for data-driven technologies to improve living conditions in our complex modern world.
+On the on hand, this enables great possibilities for data-driven technologies to improve living conditions in our complex and modern world.
 On the other hand, it also introduces the risks such as surveillance and the abuse of power.
 This observation leads to the fundamental question of the ongoing digital transformation: How can data be used to drive innovation while protecting privacy?~\cite{Boes2022, Schallmo2016}
 
 The novel concept of \emph{Inverse Transparency}~\cite{Boes2022} is concerned with this question.
 It aims to provide true data sovereignty for individuals while allowing the sensible usage of data to support digital innovation.
 This is achieved by tracking each access to sensitive data.
-Whenever a data consumer requests, aggregates, or analyses data of individuals a log is created.
+Whenever a data consumer requests, aggregates, or analyses data of individuals, a log is created.
 Data owners gain transparent insights into the usage of their data through those logs:
 Who accessed which of my data and why?
 Moreover, data owners can define policies that restrict access to their data for data consumers.
@@ -26,7 +26,7 @@ It consists of two actors: The data owner and the data consumer.
 The latter aims to access some sensitive data of the former.
 Each data access is tracked by a monitor component (\emph{Monitor}), which sends the log to a dedicated server (\emph{Safekeeper}).
 A front-end application (\emph{Display}) makes all data accesses transparent to a user by visualizing the captured logs.
-It also allows data owners to define policies restricting access to their data.
+It also allows data owners to define policies that restrict the access to certain data.
 
 \begin{figure}[ht]
     \includegraphics[scale=0.16]{../img/01/toolchain.png}
@@ -38,46 +38,46 @@ It also allows data owners to define policies restricting access to their data.
 \section{Problem statement}
 
 It is crucial to the concept of \emph{Inverse Transparency} that all data accesses are tracked.
-The illegal processing of data does not become legal, however, simply because the data owner is informed transparently about the processing~\cite{Boes2022}.
-The harmful usage must therefore be legally prosecuted.
+However, the illegal processing and usage of data does not become legal simply because the data owner is transparently informed about it~\cite{Boes2022}.
+The harmful usage must be legally prosecuted.
 This motivates the idea that tracked data accesses can be shared in the system.
 If a data owner assumes that a given data access does not adhere to the data privacy regulations, the log can be forwarded to the legal department.
 Consequently, a data owner should be able to specify certain users in the system who additionally can access the respective log.
-A revoking mechanism could further provide the possibility to withdraw access to a log (e.g. because the legal department has finished processing or because the log was shared accidentally).
-This ensures that the data owner has full control over the recorded logs.
+A revoking mechanism could further provide the possibility to withdraw access to a log, e.g. because the legal department has finished processing or because the log was shared accidentally.
+This ensures that data owners always have full control over the logs concerning them.
 
 An important concern is the confidentiality of the collected logs.
 The communication between the servers in the toolchain is usually secured and encrypted via TLS~\cite{Rescorla2000}.
 The processing servers (e.g. the \emph{Safekeeper}), however, have full access to the logged data.
 This introduces several risks.
-First, the stored logs contain metadata about the tracked data access (e.g. a justification or the type of data that was accessed).
+First, the stored logs contain metadata about the tracked data access, e.g. the justification or the type of data that was accessed.
 Recent research shows that the analysis of metadata potentially undermines privacy~\cite{Greschbach2012,Mayer2016}.
-Since the log itself might contain sensitive information it should be protected from unintended usage.
+Since the log itself might contain sensitive information, it should be protected from unintended usage.
 Second, \citeauthor{Zieglmeier2021}~\cite{Zieglmeier2021} argue that their conceptual framework is instantiated by companies that have full access to the servers over which the toolchain is deployed.
 This generic approach enables great flexibility.
 Given the fact that most companies rely on cloud computing~\cite{Weber2021}, however, this introduces the problem that the data might be stored on untrusted third-party servers.
-To avoid unintended access to the stored logs the data passing those servers should be encrypted.
+To avoid unintended access to the stored logs, the data passing those servers should be encrypted.
 
 \section{Contribution}
 
 This thesis contributes to the toolchain by designing and implementing an end-to-end encrypted protocol that allows data owners to share and revoke access to their logs.
 
 Specifically, the thesis 
-(1)~designs a protocol based on a survey of multi-party encryption techniques
-(2)~implements the designed protocol and publishes it for the programming languages Typescript, Go, and Python
+(1)~designs a protocol based on a survey of multi-party encryption techniques,
+(2)~implements the designed protocol and publishes it for the programming languages Typescript, Go, and Python,
 (3)~integrates the implemented protocol into the existing toolchain, and 
 (4)~evaluates the implemented protocol in terms of functionality, security and performance.
 
 \section{Outline}
 This initial chapter motivates the thesis.
 \cref{chap:background} covers the theoretical and technical background this thesis is based on.
-It includes fundamental cryptographic concepts and specifies the understanding of end-to-end encryption.
+It includes fundamental cryptographic concepts and specifies the understanding of end-to-end encryption used throughout this work.
 The requirements of the intended protocol are investigated in \cref{chap:requirements}.
 Functional and non-functional requirements are supplemented by security requirements, which introduce three attackers the protocol must defend against.
 \cref{chap:overview} discusses different encryption techniques that can be used to implement those requirements.
 It also investigates modern end-to-end encrypted protocols and relates them to the concept proposed by this thesis.
 The theoretical design of the protocol is detailed in \cref{chap:design}.
-It specifies how logs are signed, encrypted, and decrypted by the protocol to fullfil the given requirements.
+It specifies how logs are signed, encrypted, and decrypted to fullfil the given requirements.
 \cref{chap:implementation} describes the cryptographic libraries implemented to realize the designed protocol.
 It also elaborates on the changes made in the existing toolchain to support encrypted logs.
 Given the requirements and the implementation, \cref{chap:evaluation} evaluates the protocol in terms of functionality, security and performance.
